# surge

./: .atom-build.yml  .gitignore  Cargo.toml  arp.mid  bundle.sh  ideas  log.txt
libsurgemachine/: Cargo.toml
libsurgemachine/src/: device.rs  envelope.rs  fermi.rs  helpers.rs  lib.rs  oscillator.rs  pendulum.rs  waveform.rs
scripts/: osx_vst_bundler.sh  pipeline.sh  test.sh
surgemachine/: Cargo.toml
surgemachine-cdylib/: Cargo.toml
surgemachine-cdylib/src/: lib.rs
surgemachine-macros/: cargo.toml
surgemachine-macros/src/: lib.rs
surgemachine-vst/: Cargo.toml
surgemachine-vst/fermi/: Cargo.toml
surgemachine-vst/fermi/src/: lib.rs
surgemachine-vst/pendulum/: Cargo.toml
surgemachine-vst/pendulum/src/: lib.rs
surgemachine-vst/plugin-base/: Cargo.toml
surgemachine-vst/plugin-base/src/: lib.rs  synth_plugin.rs
surgemachine-vst/src/: lib.rs
surgemachine/src/: device.rs  envelope.rs  fermi.rs  frame.rs  helpers.rs  lib.rs  oscillator.rs  params_bag.rs  params_macros.rs  pendulum.rs  poly_synth.rs  voice.rs  waveform.rs
surgemachinevst/: Cargo.toml
surgemachinevst/src/: pendulum.rs
testdata/: lownote.mid  pure_saw.fxp  unison1.fxp
